# Odometer

./: Dockerfile  LICENSE  README.md  REVIEW_FINDINGS.md
.github/workflows/: bazaar.yml  deploy.yml
app/: main.py  pdf_report.py  pyproject.toml
app/static/: index.html  register_service
