[project]
name = "odometer"
version = "0.1.0"
description = "BlueOS Odometer Extension for tracking vehicle usage statistics"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

